src/TigerParser.java
// $ANTLR 3.5.2 src/Tiger.g 2018-11-22 10:41:55

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class TigerParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "FOR", "ID", "IFTHEN", "INTLIT", 
		"LETEXP", "MULTEXP", "NEGATION", "RECTY", "ROOT", "STRINGLIT", "WHILE", 
		"WS", "'&'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'.'", "'/'", "':'", 
		"':='", "';'", "'<'", "'<='", "'<>'", "'='", "'>'", "'>='", "'['", "']'", 
		"'array'", "'break'", "'do'", "'else'", "'end'", "'for'", "'function'", 
		"'if'", "'in'", "'let'", "'nil'", "'of'", "'then'", "'to'", "'type'", 
		"'var'", "'while'", "'{'", "'|'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int FOR=4;
	public static final int ID=5;
	public static final int IFTHEN=6;
	public static final int INTLIT=7;
	public static final int LETEXP=8;
	public static final int MULTEXP=9;
	public static final int NEGATION=10;
	public static final int RECTY=11;
	public static final int ROOT=12;
	public static final int STRINGLIT=13;
	public static final int WHILE=14;
	public static final int WS=15;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public TigerParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public TigerParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return TigerParser.tokenNames; }
	@Override public String getGrammarFileName() { return "src/Tiger.g"; }


	public static class program_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "program"
	// src/Tiger.g:26:1: program : exp -> ^( ROOT exp ) ;
	public final TigerParser.program_return program() throws RecognitionException {
		TigerParser.program_return retval = new TigerParser.program_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope exp1 =null;

		RewriteRuleSubtreeStream stream_exp=new RewriteRuleSubtreeStream(adaptor,"rule exp");

		try {
			// src/Tiger.g:27:2: ( exp -> ^( ROOT exp ) )
			// src/Tiger.g:27:4: exp
			{
			pushFollow(FOLLOW_exp_in_program100);
			exp1=exp();
			state._fsp--;

			stream_exp.add(exp1.getTree());
			// AST REWRITE
			// elements: exp
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 27:8: -> ^( ROOT exp )
			{
				// src/Tiger.g:27:11: ^( ROOT exp )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(ROOT, "ROOT"), root_1);
				adaptor.addChild(root_1, stream_exp.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class dec_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "dec"
	// src/Tiger.g:30:1: dec : ( tyDec | varDec | funDec );
	public final TigerParser.dec_return dec() throws RecognitionException {
		TigerParser.dec_return retval = new TigerParser.dec_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope tyDec2 =null;
		ParserRuleReturnScope varDec3 =null;
		ParserRuleReturnScope funDec4 =null;


		try {
			// src/Tiger.g:31:2: ( tyDec | varDec | funDec )
			int alt1=3;
			switch ( input.LA(1) ) {
			case 50:
				{
				alt1=1;
				}
				break;
			case 51:
				{
				alt1=2;
				}
				break;
			case 42:
				{
				alt1=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}
			switch (alt1) {
				case 1 :
					// src/Tiger.g:31:4: tyDec
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_tyDec_in_dec119);
					tyDec2=tyDec();
					state._fsp--;

					adaptor.addChild(root_0, tyDec2.getTree());

					}
					break;
				case 2 :
					// src/Tiger.g:32:4: varDec
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_varDec_in_dec124);
					varDec3=varDec();
					state._fsp--;

					adaptor.addChild(root_0, varDec3.getTree());

					}
					break;
				case 3 :
					// src/Tiger.g:33:4: funDec
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_funDec_in_dec129);
					funDec4=funDec();
					state._fsp--;

					adaptor.addChild(root_0, funDec4.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "dec"


	public static class tyDec_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "tyDec"
	// src/Tiger.g:36:1: tyDec : 'type' tyid '=' ty ;
	public final TigerParser.tyDec_return tyDec() throws RecognitionException {
		TigerParser.tyDec_return retval = new TigerParser.tyDec_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal5=null;
		Token char_literal7=null;
		ParserRuleReturnScope tyid6 =null;
		ParserRuleReturnScope ty8 =null;

		Object string_literal5_tree=null;
		Object char_literal7_tree=null;

		try {
			// src/Tiger.g:37:2: ( 'type' tyid '=' ty )
			// src/Tiger.g:37:4: 'type' tyid '=' ty
			{
			root_0 = (Object)adaptor.nil();


			string_literal5=(Token)match(input,50,FOLLOW_50_in_tyDec140); 
			string_literal5_tree = (Object)adaptor.create(string_literal5);
			adaptor.addChild(root_0, string_literal5_tree);

			pushFollow(FOLLOW_tyid_in_tyDec142);
			tyid6=tyid();
			state._fsp--;

			adaptor.addChild(root_0, tyid6.getTree());

			char_literal7=(Token)match(input,31,FOLLOW_31_in_tyDec144); 
			char_literal7_tree = (Object)adaptor.create(char_literal7);
			adaptor.addChild(root_0, char_literal7_tree);

			pushFollow(FOLLOW_ty_in_tyDec146);
			ty8=ty();
			state._fsp--;

			adaptor.addChild(root_0, ty8.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "tyDec"


	public static class ty_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "ty"
	// src/Tiger.g:40:1: ty : ( tyid | arrTy | recTy );
	public final TigerParser.ty_return ty() throws RecognitionException {
		TigerParser.ty_return retval = new TigerParser.ty_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope tyid9 =null;
		ParserRuleReturnScope arrTy10 =null;
		ParserRuleReturnScope recTy11 =null;


		try {
			// src/Tiger.g:41:2: ( tyid | arrTy | recTy )
			int alt2=3;
			switch ( input.LA(1) ) {
			case ID:
				{
				alt2=1;
				}
				break;
			case 36:
				{
				alt2=2;
				}
				break;
			case 53:
				{
				alt2=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
				case 1 :
					// src/Tiger.g:41:4: tyid
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_tyid_in_ty158);
					tyid9=tyid();
					state._fsp--;

					adaptor.addChild(root_0, tyid9.getTree());

					}
					break;
				case 2 :
					// src/Tiger.g:42:4: arrTy
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_arrTy_in_ty163);
					arrTy10=arrTy();
					state._fsp--;

					adaptor.addChild(root_0, arrTy10.getTree());

					}
					break;
				case 3 :
					// src/Tiger.g:43:4: recTy
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_recTy_in_ty168);
					recTy11=recTy();
					state._fsp--;

					adaptor.addChild(root_0, recTy11.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "ty"


	public static class arrTy_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "arrTy"
	// src/Tiger.g:46:1: arrTy : 'array' 'of' tyid ;
	public final TigerParser.arrTy_return arrTy() throws RecognitionException {
		TigerParser.arrTy_return retval = new TigerParser.arrTy_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal12=null;
		Token string_literal13=null;
		ParserRuleReturnScope tyid14 =null;

		Object string_literal12_tree=null;
		Object string_literal13_tree=null;

		try {
			// src/Tiger.g:47:2: ( 'array' 'of' tyid )
			// src/Tiger.g:47:4: 'array' 'of' tyid
			{
			root_0 = (Object)adaptor.nil();


			string_literal12=(Token)match(input,36,FOLLOW_36_in_arrTy179); 
			string_literal12_tree = (Object)adaptor.create(string_literal12);
			adaptor.addChild(root_0, string_literal12_tree);

			string_literal13=(Token)match(input,47,FOLLOW_47_in_arrTy181); 
			string_literal13_tree = (Object)adaptor.create(string_literal13);
			adaptor.addChild(root_0, string_literal13_tree);

			pushFollow(FOLLOW_tyid_in_arrTy183);
			tyid14=tyid();
			state._fsp--;

			adaptor.addChild(root_0, tyid14.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "arrTy"


	public static class recTy_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "recTy"
	// src/Tiger.g:50:1: recTy : '{' ( fieldDec ( ',' fieldDec )* )? '}' ;
	public final TigerParser.recTy_return recTy() throws RecognitionException {
		TigerParser.recTy_return retval = new TigerParser.recTy_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal15=null;
		Token char_literal17=null;
		Token char_literal19=null;
		ParserRuleReturnScope fieldDec16 =null;
		ParserRuleReturnScope fieldDec18 =null;

		Object char_literal15_tree=null;
		Object char_literal17_tree=null;
		Object char_literal19_tree=null;

		try {
			// src/Tiger.g:51:2: ( '{' ( fieldDec ( ',' fieldDec )* )? '}' )
			// src/Tiger.g:51:4: '{' ( fieldDec ( ',' fieldDec )* )? '}'
			{
			root_0 = (Object)adaptor.nil();


			char_literal15=(Token)match(input,53,FOLLOW_53_in_recTy195); 
			char_literal15_tree = (Object)adaptor.create(char_literal15);
			adaptor.addChild(root_0, char_literal15_tree);

			// src/Tiger.g:51:8: ( fieldDec ( ',' fieldDec )* )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==ID) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// src/Tiger.g:51:9: fieldDec ( ',' fieldDec )*
					{
					pushFollow(FOLLOW_fieldDec_in_recTy198);
					fieldDec16=fieldDec();
					state._fsp--;

					adaptor.addChild(root_0, fieldDec16.getTree());

					// src/Tiger.g:51:18: ( ',' fieldDec )*
					loop3:
					while (true) {
						int alt3=2;
						int LA3_0 = input.LA(1);
						if ( (LA3_0==21) ) {
							alt3=1;
						}

						switch (alt3) {
						case 1 :
							// src/Tiger.g:51:19: ',' fieldDec
							{
							char_literal17=(Token)match(input,21,FOLLOW_21_in_recTy201); 
							char_literal17_tree = (Object)adaptor.create(char_literal17);
							adaptor.addChild(root_0, char_literal17_tree);

							pushFollow(FOLLOW_fieldDec_in_recTy203);
							fieldDec18=fieldDec();
							state._fsp--;

							adaptor.addChild(root_0, fieldDec18.getTree());

							}
							break;

						default :
							break loop3;
						}
					}

					}
					break;

			}

			char_literal19=(Token)match(input,55,FOLLOW_55_in_recTy209); 
			char_literal19_tree = (Object)adaptor.create(char_literal19);
			adaptor.addChild(root_0, char_literal19_tree);

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "recTy"


	public static class fieldDec_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "fieldDec"
	// src/Tiger.g:54:1: fieldDec : ID ':' tyid ;
	public final TigerParser.fieldDec_return fieldDec() throws RecognitionException {
		TigerParser.fieldDec_return retval = new TigerParser.fieldDec_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token ID20=null;
		Token char_literal21=null;
		ParserRuleReturnScope tyid22 =null;

		Object ID20_tree=null;
		Object char_literal21_tree=null;

		try {
			// src/Tiger.g:55:2: ( ID ':' tyid )
			// src/Tiger.g:55:4: ID ':' tyid
			{
			root_0 = (Object)adaptor.nil();


			ID20=(Token)match(input,ID,FOLLOW_ID_in_fieldDec221); 
			ID20_tree = (Object)adaptor.create(ID20);
			adaptor.addChild(root_0, ID20_tree);

			char_literal21=(Token)match(input,25,FOLLOW_25_in_fieldDec223); 
			char_literal21_tree = (Object)adaptor.create(char_literal21);
			adaptor.addChild(root_0, char_literal21_tree);

			pushFollow(FOLLOW_tyid_in_fieldDec225);
			tyid22=tyid();
			state._fsp--;

			adaptor.addChild(root_0, tyid22.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "fieldDec"


	public static class funDec_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "funDec"
	// src/Tiger.g:58:1: funDec : 'function' ID '(' ( fieldDec ( ',' fieldDec )* )? ')' returnType '=' exp ;
	public final TigerParser.funDec_return funDec() throws RecognitionException {
		TigerParser.funDec_return retval = new TigerParser.funDec_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal23=null;
		Token ID24=null;
		Token char_literal25=null;
		Token char_literal27=null;
		Token char_literal29=null;
		Token char_literal31=null;
		ParserRuleReturnScope fieldDec26 =null;
		ParserRuleReturnScope fieldDec28 =null;
		ParserRuleReturnScope returnType30 =null;
		ParserRuleReturnScope exp32 =null;

		Object string_literal23_tree=null;
		Object ID24_tree=null;
		Object char_literal25_tree=null;
		Object char_literal27_tree=null;
		Object char_literal29_tree=null;
		Object char_literal31_tree=null;

		try {
			// src/Tiger.g:59:2: ( 'function' ID '(' ( fieldDec ( ',' fieldDec )* )? ')' returnType '=' exp )
			// src/Tiger.g:59:4: 'function' ID '(' ( fieldDec ( ',' fieldDec )* )? ')' returnType '=' exp
			{
			root_0 = (Object)adaptor.nil();


			string_literal23=(Token)match(input,42,FOLLOW_42_in_funDec236); 
			string_literal23_tree = (Object)adaptor.create(string_literal23);
			adaptor.addChild(root_0, string_literal23_tree);

			ID24=(Token)match(input,ID,FOLLOW_ID_in_funDec238); 
			ID24_tree = (Object)adaptor.create(ID24);
			adaptor.addChild(root_0, ID24_tree);

			char_literal25=(Token)match(input,17,FOLLOW_17_in_funDec240); 
			char_literal25_tree = (Object)adaptor.create(char_literal25);
			adaptor.addChild(root_0, char_literal25_tree);

			// src/Tiger.g:59:22: ( fieldDec ( ',' fieldDec )* )?
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==ID) ) {
				alt6=1;
			}
			switch (alt6) {
				case 1 :
					// src/Tiger.g:59:23: fieldDec ( ',' fieldDec )*
					{
					pushFollow(FOLLOW_fieldDec_in_funDec243);
					fieldDec26=fieldDec();
					state._fsp--;

					adaptor.addChild(root_0, fieldDec26.getTree());

					// src/Tiger.g:59:31: ( ',' fieldDec )*
					loop5:
					while (true) {
						int alt5=2;
						int LA5_0 = input.LA(1);
						if ( (LA5_0==21) ) {
							alt5=1;
						}

						switch (alt5) {
						case 1 :
							// src/Tiger.g:59:32: ',' fieldDec
							{
							char_literal27=(Token)match(input,21,FOLLOW_21_in_funDec245); 
							char_literal27_tree = (Object)adaptor.create(char_literal27);
							adaptor.addChild(root_0, char_literal27_tree);

							pushFollow(FOLLOW_fieldDec_in_funDec247);
							fieldDec28=fieldDec();
							state._fsp--;

							adaptor.addChild(root_0, fieldDec28.getTree());

							}
							break;

						default :
							break loop5;
						}
					}

					}
					break;

			}

			char_literal29=(Token)match(input,18,FOLLOW_18_in_funDec253); 
			char_literal29_tree = (Object)adaptor.create(char_literal29);
			adaptor.addChild(root_0, char_literal29_tree);

			pushFollow(FOLLOW_returnType_in_funDec255);
			returnType30=returnType();
			state._fsp--;

			adaptor.addChild(root_0, returnType30.getTree());

			char_literal31=(Token)match(input,31,FOLLOW_31_in_funDec257); 
			char_literal31_tree = (Object)adaptor.create(char_literal31);
			adaptor.addChild(root_0, char_literal31_tree);

			pushFollow(FOLLOW_exp_in_funDec259);
			exp32=exp();
			state._fsp--;

			adaptor.addChild(root_0, exp32.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "funDec"


	public static class returnType_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "returnType"
	// src/Tiger.g:62:1: returnType : ( ':' tyid |);
	public final TigerParser.returnType_return returnType() throws RecognitionException {
		TigerParser.returnType_return retval = new TigerParser.returnType_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal33=null;
		ParserRuleReturnScope tyid34 =null;

		Object char_literal33_tree=null;

		try {
			// src/Tiger.g:63:2: ( ':' tyid |)
			int alt7=2;
			int LA7_0 = input.LA(1);
			if ( (LA7_0==25) ) {
				alt7=1;
			}
			else if ( (LA7_0==31) ) {
				alt7=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 7, 0, input);
				throw nvae;
			}

			switch (alt7) {
				case 1 :
					// src/Tiger.g:63:4: ':' tyid
					{
					root_0 = (Object)adaptor.nil();


					char_literal33=(Token)match(input,25,FOLLOW_25_in_returnType271); 
					char_literal33_tree = (Object)adaptor.create(char_literal33);
					adaptor.addChild(root_0, char_literal33_tree);

					pushFollow(FOLLOW_tyid_in_returnType273);
					tyid34=tyid();
					state._fsp--;

					adaptor.addChild(root_0, tyid34.getTree());

					}
					break;
				case 2 :
					// src/Tiger.g:65:2: 
					{
					root_0 = (Object)adaptor.nil();


					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "returnType"


	public static class varDec_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "varDec"
	// src/Tiger.g:67:1: varDec : 'var' ID vd ':=' exp ;
	public final TigerParser.varDec_return varDec() throws RecognitionException {
		TigerParser.varDec_return retval = new TigerParser.varDec_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal35=null;
		Token ID36=null;
		Token string_literal38=null;
		ParserRuleReturnScope vd37 =null;
		ParserRuleReturnScope exp39 =null;

		Object string_literal35_tree=null;
		Object ID36_tree=null;
		Object string_literal38_tree=null;

		try {
			// src/Tiger.g:68:2: ( 'var' ID vd ':=' exp )
			// src/Tiger.g:68:4: 'var' ID vd ':=' exp
			{
			root_0 = (Object)adaptor.nil();


			string_literal35=(Token)match(input,51,FOLLOW_51_in_varDec288); 
			string_literal35_tree = (Object)adaptor.create(string_literal35);
			adaptor.addChild(root_0, string_literal35_tree);

			ID36=(Token)match(input,ID,FOLLOW_ID_in_varDec290); 
			ID36_tree = (Object)adaptor.create(ID36);
			adaptor.addChild(root_0, ID36_tree);

			pushFollow(FOLLOW_vd_in_varDec292);
			vd37=vd();
			state._fsp--;

			adaptor.addChild(root_0, vd37.getTree());

			string_literal38=(Token)match(input,26,FOLLOW_26_in_varDec294); 
			string_literal38_tree = (Object)adaptor.create(string_literal38);
			adaptor.addChild(root_0, string_literal38_tree);

			pushFollow(FOLLOW_exp_in_varDec296);
			exp39=exp();
			state._fsp--;

			adaptor.addChild(root_0, exp39.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "varDec"


	public static class vd_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "vd"
	// src/Tiger.g:71:1: vd : ( ':' tyid |);
	public final TigerParser.vd_return vd() throws RecognitionException {
		TigerParser.vd_return retval = new TigerParser.vd_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal40=null;
		ParserRuleReturnScope tyid41 =null;

		Object char_literal40_tree=null;

		try {
			// src/Tiger.g:72:2: ( ':' tyid |)
			int alt8=2;
			int LA8_0 = input.LA(1);
			if ( (LA8_0==25) ) {
				alt8=1;
			}
			else if ( (LA8_0==26) ) {
				alt8=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 8, 0, input);
				throw nvae;
			}

			switch (alt8) {
				case 1 :
					// src/Tiger.g:72:4: ':' tyid
					{
					root_0 = (Object)adaptor.nil();

